.page__title whitespace fix.

--- a/source/sass/_sass-custom-mixins.scss
+++ b/source/sass/_sass-custom-mixins.scss
@@ -148,6 +148,7 @@
   @include pseudo-heading(h1);
 
   margin-top: map-get($grid-column-responsive-gutter, narrow)* 0.5 * -1;
+  margin-bottom: 0;
   padding-top: 1em;
   padding-bottom: 1em;
 
@@ -156,6 +157,7 @@
     @include line-height-fit($header-lineheight, bottom, 1.75);
 
     padding-top: 0;
+    padding-bottom: 1.25em;
   }
   // These calculations provide whitespace below the page title that is
   // identical to the whitespace between the page title and the header (the
